# memoryops-ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_ENTERPRISE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  docker-compose.yml
services/api/: .dockerignore  Dockerfile  pyproject.toml  railway.toml  requirements-dev.txt  requirements-postgres.txt  requirements.txt
services/api/app/: __init__.py  http_hardening.py  main.py
services/api/app/auth/: __init__.py  dependencies.py  jwt.py  middleware.py  principal.py  providers.py
services/api/tests/: _worker_helpers.py  conftest.py  test_archive_worker.py  test_auth.py  test_benchmark.py  test_chaos.py  test_chat_request_scope.py  test_compression_invariants.py  test_conflict_scan_worker.py  test_context_compression.py  test_decay_worker.py  test_deleted_memory_leakage_evals.py  test_deletion.py  test_deletion_compaction_worker.py  test_deletion_proof_lineage.py  test_deletion_verification_worker.py  test_economics.py  test_evals_endpoint_guard.py  test_evidence_layer.py  test_extraction_quality.py  test_governance_api.py  test_headroom_fallback.py  test_http_hardening.py  test_keyword_scoring.py  test_lifecycle_worker.py  test_loop_api.py  test_loop_events.py  test_loop_registry.py  test_loop_state_machine.py  test_memory_read_loop.py  test_memory_write_loop.py  test_metrics_endpoint.py  test_policy_broker.py  test_production_profile.py  test_provider_recorded.py  test_ranker_weights.py  test_readiness_probes.py  test_recall_output_gates.py  test_rls.py  test_scope_coverage.py  (+10 more)
(+231 files in other folders)
